hphp/hack/test/typecheck/classname/class.php.exp
File "class.php", line 3, characters 12-19:
Encountered unexpected text `class<C>`, was expecting a type hint. (Parsing[1002])
