hphp/hack/test/typecheck/classname/class.php
<?hh

function f(class<C> $c): void {}
